Fixed memory leaks, and solved flag issues, redid the display to use sprites instead of shapes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,4 +7,4 @@
  file(GLOB SOURCES "src/*.c")
  file(GLOB HEADERS "headers/*.h")
  add_executable(Chip-8-emulator ${SOURCES})
- target_link_libraries(Chip-8-emulator csfml-window csfml-graphics csfml-system)
+ target_link_libraries(Chip-8-emulator csfml-window csfml-graphics csfml-system csfml-audio)
